WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51256
Fix test failures where NULL GeolocationClient is provided
https://bugs.webkit.org/show_bug.cgi?id=51256
Summary
Fix test failures where NULL GeolocationClient is provided
John Knottenbelt
Reported
2010-12-17 08:26:26 PST
We need to test for NULL m_client on GeolocationClientProxy::geolocationDestroyed() as well because GeolocationClientProxy::geolocationDestroyed() is called unconditionally from the Page destructor. e.g. webkit_unit_tests on Win. Test SelectPopupMenuTest.ShowThenHide Backtrace: WebKit::GeolocationClientProxy::geolocationDestroyed [0x01E802D3+3] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\src\geolocationclientproxy.cpp:58) Backtrace: WebKit::GeolocationClientProxy::geolocationDestroyed [0x01E802D3+3] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\src\geolocationclientproxy.cpp:58) WebCore::GeolocationController::~GeolocationController [0x015F3062+18] (d:\google-windows-2\chromium-win-release-tests\build\webcore\page\geolocationcontroller.cpp:46) WebCore::Page::~Page [0x0143CAC7+711] (d:\google-windows-2\chromium-win-release-tests\build\webcore\page\page.cpp:228) WebKit::WebViewImpl::close [0x01E5C330+96] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\src\webviewimpl.cpp:937) testing::TestInfo::Run [0x01E4D13D+269] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\testing\gtest\src\gtest.cc:2322) testing::TestCase::Run [0x01E4D2FF+239] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\testing\gtest\src\gtest.cc:2423) testing::internal::UnitTestImpl::RunAllTests [0x01E4D683+499] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\testing\gtest\src\gtest.cc:4199) testing::UnitTest::Run [0x01E4E0C9+137] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\testing\gtest\src\gtest.cc:3838) base::TestSuite::Run [0x01DE1468+216] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\base\test\test_suite.cc:127) main [0x0133AC75+37] (d:\google-windows-2\chromium-win-release-tests\build\webkit\chromium\tests\runalltests.cpp:54)
Attachments
Patch
(1.26 KB, patch)
2010-12-17 08:29 PST
,
John Knottenbelt
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Knottenbelt
Comment 1
2010-12-17 08:29:20 PST
Created
attachment 76884
[details]
Patch
Jeremy Orlow
Comment 2
2010-12-17 08:36:37 PST
Comment on
attachment 76884
[details]
Patch Pretty sure this is right and things are currently broken, so r=me. Steve please take a look tho.
Steve Block
Comment 3
2010-12-17 08:51:36 PST
LGTM
WebKit Commit Bot
Comment 4
2010-12-17 09:35:21 PST
The commit-queue encountered the following flaky tests while processing
attachment 76884
[details]
: http/tests/navigation/target-frame-from-window.html
bug 51098
(author:
ddkilzer@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2010-12-17 09:37:21 PST
Comment on
attachment 76884
[details]
Patch Clearing flags on attachment: 76884 Committed
r74274
: <
http://trac.webkit.org/changeset/74274
>
WebKit Commit Bot
Comment 6
2010-12-17 09:37:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug