2010-12-17  John Knottenbelt  <jknotten@chromium.org>

Reviewed by Jeremy Orlow.

        Fix test failures where NULL GeolocationClient is provided
        https://bugs.webkit.org/show_bug.cgi?id=51256

        * src/GeolocationClientProxy.cpp:
        (WebKit::GeolocationClientProxy::geolocationDestroyed):

git-svn-id: svn://svn.chromium.org/blink/trunk@74274 bbb929c8-8fbe-4397-9dbb-9b2b20218538