third_party/WebKit/WebKit/chromium/src/GeolocationClientProxy.cpp
@@ -56,7 +56,8 @@ void GeolocationClientProxy::setController(WebCore::GeolocationController* contr
 
 void GeolocationClientProxy::geolocationDestroyed()
 {
-    m_client->geolocationDestroyed();
+    if (m_client)
+        m_client->geolocationDestroyed();
 }
 
 void GeolocationClientProxy::startUpdating()
